<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marcelo.aulaandroid.HelloWord">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olaMundo"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEx3"
        android:layout_width="368dp"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:text="@string/homeButtonEx3"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/buttonEx4"
        android:layout_width="368dp"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:text="@string/homeButtonEx4"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="72dp" />

    <Button
        android:id="@+id/buttonExSQL"
        android:layout_width="368dp"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:text="@string/homeButtonExSQL"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="72dp" />

</TableLayout>
