<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marcelo.aulaandroid.Exercicio3SegundaTela">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="11dp"
        android:layout_y="26dp"
        android:text="@string/ex3_nome"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="12dp"
        android:layout_y="56dp"
        android:text="@string/exe3_telefone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="47dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="273dp"
        android:layout_y="20dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="14dp"
        android:layout_y="87dp"
        android:text="@string/exe3_end"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="86dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="14dp"
        android:layout_y="125dp"
        android:text="@string/ex3_site"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="128dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="225dp"
        android:layout_y="38dp"
        android:text="@string/ex3_nota"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="170dp" />
</AbsoluteLayout>
