<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marcelo.aulaandroid.Exercicio3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercicio3textview"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="368dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteY="53dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="172dp"
        android:layout_height="47dp"
        android:text="@string/exercicio3botao1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="111dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:text="@string/exercicio3botao2"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="109dp" />


</TableLayout>
